Fix width of codeblocks on small screens

--- a/src/components/maincontent.module.css
+++ b/src/components/maincontent.module.css
@@ -1,5 +1,6 @@
 .main-content{
   padding: 0 10%;
+  max-width: 100%;
 }
 
 @media all and (min-width: 600px) {
