--- a/src/components/wrapper.module.css
+++ b/src/components/wrapper.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-flow: wrap;
   position: absolute;
-  min-width: 100%;
+  width: 100%;
   min-height: 100%;
   /* padding-bottom has to be at least 2em so that no content is hidden under the footer */
   padding-bottom: 3em;
